hphp/hack/test/typecheck/parse_int_with_underscore_bad7.php.exp
File "parse_int_with_underscore_bad7.php", line 5, characters 18-20:
Encountered unexpected token `__2`. (Parsing[1002])
